objects/vlocity_cmt__AsyncProcessStep__c.object
<CustomObject>
    <description>Async Engine Step details</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Additional data that was input to the Execute and Finish Process.</description>
        <label>Additonal Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Async Process object.</description>
        <label>Async Process</label>
        <referenceTo>vlocity_cmt__AsyncProcess__c</referenceTo>
        <relationshipLabel>Async Process Steps</relationshipLabel>
        <relationshipName>AsyncProcessSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the items to be processed given to the Execute Process.</description>
        <label>Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>User-friendly overall information related to the Async Process Step.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfItemsProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of items already processed.</description>
        <label>Number Of Items Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartProcessAdditionalData__c</fullName>
        <description>Additional data that was input to the Start Process.</description>
        <label>Start Process Additonal Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartProcessItemsToProcessList__c</fullName>
        <description>List of the items to be processed given to the Start Process.</description>
        <label>Start Process Items to Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Status of this Async Process Step.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>InProgress-Fail</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepConfiguration__c</fullName>
        <description>Async Process Step details (JSON).</description>
        <label>Step Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StepNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Index of this Step in the Steps array.</description>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TechnicalMessage__c</fullName>
        <description>Technical details about the Async Engine execution.</description>
        <label>Technical Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalNumberOfItemsToBeProcessed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of items that need to be processed.</description>
        <label>Total Number Of Items To Be Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Async Process Step</label>
    <nameField>
        <label>Async Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Process Steps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>